k3s/observatory/prometheus-service-iam.yaml
#https://devopscube.com/setup-prometheus-monitoring-on-kubernetes/
# create namespace monitoring
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    environment: development
    team: engineering
  annotations:
    description: "Development environment namespace"
