k3s/observatory/prometheus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: prometheus-deployment
    namespace: monitoring
    labels:
        app: prometheus-server
spec:
    replicas: 1
    selector:
        matchLabels:
            app: prometheus-server
    template:
        metadata:
            labels:
                app: prometheus-server
        spec:
            containers:
                - name: prometheus
                  image: prom/prometheus
                  args:
                      - "--config.file=/etc/prometheus/prometheus.yml"
                      - "--web.enable-remote-write-receiver"
                      - "--storage.tsdb.path=/prometheus/"
                  ports:
                      - containerPort: 9090
                  volumeMounts:
                      - name: prometheus-config-volume
                        mountPath: /etc/prometheus/
                      - name: prometheus-storage-volume
                        mountPath: /prometheus/
            volumes:
                - name: prometheus-config-volume
                  configMap:
                      defaultMode: 420
                      name: prometheus-server-conf

                - name: prometheus-storage-volume
                  emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
    name: prometheus-service
    namespace: monitoring
    annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9090"

spec:
    selector:
        app: prometheus-server
    # type: NodePort
    ports:
        - port: 9090
          targetPort: 9090
          # nodePort: 30000
---
## Nginx Ingress
## Follow https://devopscube.com/setup-ingress-kubernetes-nginx-controller/

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: prometheus-ui
    namespace: monitoring
    annotations:
        kubernetes.io/ingress.class: nginx
spec:
    rules:
        # Use the host you used in your kubernetes Ingress Configurations
        - host: prometheus.example.com
          http:
              paths:
                  - backend:
                        service:
                            name: prometheus-service
                            port:
                                number: 9090
                    path: /
                    pathType: Prefix
    # tls:
    # - hosts:
    #   - prometheus.apps.shaker242.lab
    #   secretName: prometheus-secret
---
# apiVersion: v1
# kind: Secret
# metadata:
#   name: prometheus-secret
#   namespace: monitoring
# data:
# # USe base64 in the certs
#   tls.crt: xxx
#   tls.key: xxx
